Continuando o curso, módulo 4 em andamento

--- a/primeira-api/algafood-api/pom.xml
+++ b/primeira-api/algafood-api/pom.xml
@@ -59,6 +59,10 @@
             <artifactId>lombok</artifactId>
             <version>1.18.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
