--- a/primeira-api/algafood-api/pom.xml
+++ b/primeira-api/algafood-api/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>5.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
