Módulo 8 em progresso

--- a/primeira-api/algafood-api/pom.xml
+++ b/primeira-api/algafood-api/pom.xml
@@ -64,6 +64,10 @@
             <artifactId>flyway-core</artifactId>
             <version>5.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
