--- a/primeira-api/algafood-api/pom.xml
+++ b/primeira-api/algafood-api/pom.xml
@@ -88,6 +88,11 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.6.7</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M6</version>
+            </plugin>
         </plugins>
     </build>
 
